# phantom

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
assets/: banner.txt
examples/: README.md
examples/aiconfig-trap/: .mcp.json  CLAUDE.md
examples/aiconfig-trap/.claude/: settings.json
examples/mcp-mock/: .mcp.json  server.py
examples/promptinjection-trap/: README.md  cyrillic-lookalike.md  encoded-base64.md  encoded-rot13.md  markdown-hidden.md
examples/promptinjection-trap/.github/ISSUE_TEMPLATE/: bug.md
examples/promptinjection-trap/docs/: welcome.md
phantom-aiconfig/: Cargo.toml
phantom-aiconfig/src/: lib.rs
phantom-cli/: Cargo.toml
phantom-cli/src/: main.rs
phantom-core/: Cargo.toml
phantom-core/src/: lib.rs
phantom-fetch/: Cargo.toml
phantom-fetch/src/: lib.rs
phantom-mcp/: Cargo.toml
phantom-mcp/src/: lib.rs
phantom-promptinjection/: Cargo.toml
phantom-promptinjection/src/: lib.rs
phantom-rules/: Cargo.toml
phantom-rules/src/: lib.rs  normalize.rs
phantom-snapshot/: Cargo.toml
phantom-snapshot/src/: lib.rs
phantom-tarball/: Cargo.toml
phantom-tarball/src/: lib.rs
